--- a/index.html
+++ b/index.html
@@ -29,9 +29,18 @@
             <!--TimerRow-->
             <div class="col-md-1">
             </div>
-            <div class="col-md-10" id="timerRow">Time
+            <div class="col-md-10" id="directions">Answer the question before time runs out.
             </div>
             <div class="col-md-1">
+            </div>
+        </div>
+        <div class="row">
+            <!--TimerRow-->
+            <div class="col-md-4">
+            </div>
+            <div class="col-md-4" id="timerRow">Time remaining:
+            </div>
+            <div class="col-md-4">
             </div>
         </div>
         <div class="row">
@@ -86,7 +95,6 @@
     </div>
     </div>
     <!--Container-->
-
 </body>
 
 
