--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <!--TitleRow-->
             <div class="col-md-1">
             </div>
-            <div class="col-md-10" id="titleRow"> Technology Trivia
+            <div class="col-md-10" id="titleRow"> Technology Trivia Challenge
             </div>
             <div class="col-md-1">
             </div>
