--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <div class="container" id="box">
+    <div class="container">
         <div class="row">
             <!--TitleRow-->
             <div class="col-md-1">
@@ -29,11 +29,12 @@
             <!--TimerRow-->
             <div class="col-md-1">
             </div>
-            <div class="col-md-10" id="directions">Answer the question before time runs out.
+            <div class="col-md-10" id="directions">Answer the questions before time runs out!
             </div>
             <div class="col-md-1">
             </div>
         </div>
+        <div id="box">
         <div class="row">
             <!--TimerRow-->
             <div class="col-md-4">
@@ -59,7 +60,7 @@
         </div>
         <div class="col-md-6">
             <div class="container" id="mainStage">
-                <img id="gifHolder" src="" height="300" width="400">
+                <img id="gifHolder" src="" height="250" width="375">
                 <div class="row">
                     <!--answer1-->
                     <div class="col-md-12">
@@ -85,11 +86,20 @@
                     <button type="button" class="btn btn-info btn-block" id="D">D</button>
                     </div>  
                 </div>
+                <div class="row">
+                    <!--answer4-->
+                    <div class="col-md-12">
+                    <p class = "results" id="correctAnswers"></p>
+                    <p class = "results" id="incorrectAnswers"></p>
+                    </div>  
+                </div>
+                <!---->
             </div>
         </div>
         <div class="col-md-3">
         </div>
     </div>
+</div>
     <div class="row">
         <!--Footer-->
     </div>
